# veggie-tomo

./: .env  .gitignore  Cargo.toml  README.md  install.sh  run.sh
assets/css/: app.css  fallback.css
assets/js/: tw.js
migrations/: 20250401091336_vege_table_s.sql  20250401091701_compatibility_relations_table.sql  20250402023653_users_table.sql
src/: answers.rs  app.rs  enviroment.rs  errors.rs  fallback.rs  main.rs  router.rs  state.rs
src/jwt/: jwt.rs  mod.rs  services.rs  sockets.rs  utils.rs
src/routes/: mod.rs  root.rs
src/routes/api_handlers/: answers.rs  api_router.rs  mod.rs  relations.rs  sockets.rs  utils.rs
src/routes/api_sockets/: mod.rs  sockets.rs
src/routes/user_handlers/: mod.rs  user_router.rs  users.rs
templates/layouts/: base.html
templates/partials/: fallback.html  register.html  root.html
