[package]
name = "veggie-tomo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "~0.8.0" }
tokio = { version = "~1.39.3", features = ["full"] }
serde = { version = "~1.0.217", features = ["derive"] }
serde_json = { version = "~1.0.134" }
http = { version = "~1.1.0" }
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.34", features = ["serde"] }
jsonwebtoken = "9.3.0"
askama = "0.13.0"
validator = { version = "0.20", features = ["derive"]}
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
once_cell = "1.18"